# cmake-template

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Makefile  PULL_REQUEST_TEMPLATE.md  README.md
cmake/: CompilerWarnings.cmake  Conan.cmake  CreateTarget.cmake  Doxygen.cmake  SourcesAndHeaders.cmake  StandardSettings.cmake  StaticAnalyzers.cmake  Utils.cmake  Vcpkg.cmake
include/tmp/: tmp.hpp
src/: tmp.cpp
src/plugins/: CMakeLists.txt
src/tmp/: CMakeLists.txt  tmp.cpp
test/: CMakeLists.txt
test/src/: tmp_test.cpp
test/tmp/: CMakeLists.txt
test/tmp/src/: tmp1_test.cpp  tmp_test.cpp
